# development

./: README.md  games.py  main.py  pyproject.toml  source.py
games/: nok.py  progression.py
